langtools/test/tools/javac/NoClass.out
NoClass.java:12:24: compiler.err.doesnt.exist: nonexistent.pack
1 error
